@@ -26,6 +26,7 @@
 #ifdef HAVE_MALLOC_H
 #include <malloc.h>
 #endif
+#include <stdlib.h>
 #include <string.h>
 #include <ctype.h>
 
